--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -41,7 +41,7 @@
     "Install latest from the GitHub [repository][repo]:\n",
     "\n",
     "+ Clone the repo\n",
-    "+ `pip install -e`"
+    "+ `pip install -e .`"
    ]
   },
   {
@@ -66,113 +66,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ContextKit.core as ck"
+    "import ContextKit.read as rd"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1 item ex (Nbclassic)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%ai reset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nbclassic_server_docs = ck.nbclassic_server()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%ai 0\n",
-    "\n",
-    "Read $`nbclassic_server_docs` and give me a short summary of what is in it.  End with 'Loaded into Context' in a new paragraph"
+    "#### Read_X Functions"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The nbclassic_server_docs contain information about the Jupyter NbClassic package, which implements the classic Jupyter Notebook 6 as a Jupyter Server extension. It covers installation, configuration, usage options, development details, and the timeline for supporting nbclassic during the transition to Jupyter Notebook 7. The document also mentions the compatibility issues between Notebook 6 and 7, and the need for nbclassic to support users during this transition period.\n",
-    "\n",
-    "Loaded into Context"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Fastcore (multiple, but only want 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%ai reset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fc_ctx = ck.fastcore()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%ai 0\n",
-    "\n",
-    "Read $`fc_ctx` and give me a short summary of what is in it.  End with 'Loaded into Context' in a new paragraph"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The fc_ctx contains comprehensive documentation for the fastcore library, which is part of the fast.ai ecosystem. It includes detailed explanations and examples for various modules such as basics, foundation, dispatch, meta, parallel, script, xtras, and more. The documentation covers utility functions, classes, decorators, and tools for tasks like type dispatch, attribute delegation, metaprogramming, parallel processing, CLI creation, and XML generation. It also includes information on testing utilities and extensions to Python's standard library.\n",
-    "\n",
-    "Loaded into Context"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Discord (multiple and want multiple)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%ai reset"
+    "Each `read_x` function is designed to work with a single argument, which is the location of the resource.  This typically means a URL or a file path."
    ]
   },
   {
@@ -183,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['app', 'oauth', 'user', 'interact'])"
+       "'Answer.AI\\n\\n  * __\\n  * __\\n\\n# Answer.AI - Practical AI R&D\\n\\n##### Categories\\n\\nAll (24)\\n\\nBlog (2)\\n\\n## Other Formats\\n\\n  *  __CommonMark\\n\\nAnswer.AI is a new kind of AI R&D lab which creates practical end-u'"
       ]
      },
      "execution_count": null,
@@ -192,8 +100,14 @@
     }
    ],
    "source": [
-    "discord = AttrDict(ck.discord())\n",
-    "discord.keys()"
+    "rd.read_url('https://www.answer.ai/')[:200]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Other arguments are always optional, but can be useful at times.  For example, the `heavy` argument in `read_url` allows you to do a heavy scrape with a contactless browser using `playwrightnb`.  "
    ]
   },
   {
@@ -204,7 +118,7 @@
     {
      "data": {
       "text/plain": [
-       "'# Discord Application Commands\\n\\nApplication commands are native ways to interact with apps in the Discord client. There are 3 types of commands accessible in different interfaces: the chat input, a me'"
+       "'Answer.AI\\n\\n  * __\\n  * __\\n\\n# Answer.AI - Practical AI R&D\\n\\n##### Categories\\n\\nAll (24)\\n\\nBlog (2)\\n\\n## Other Formats\\n\\n  *  __CommonMark\\n\\nAnswer.AI is a new kind of AI R&D lab which creates practical end-u'"
       ]
      },
      "execution_count": null,
@@ -213,35 +127,109 @@
     }
    ],
    "source": [
-    "discord.app[:200]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user, oauth = discord.user, discord.oauth"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%ai 0\n",
-    "Explain the difference between what's in $`user` vs $`oauth`"
+    "rd.read_url('https://www.answer.ai/',heavy=True)[:200]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `user` variable contains information about developing a user-installable Discord app, including details on setting up the project, creating commands, handling interactions, and using metadata.\n",
-    "\n",
-    "The `oauth` variable contains information about Discord's OAuth2 implementation, including different authorization flows, scopes, token handling, and API endpoints related to OAuth2 authentication."
+    "Many have been creates so far, such as"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['read_dir',\n",
+       " 'read_file',\n",
+       " 'read_gdoc',\n",
+       " 'read_gh_file',\n",
+       " 'read_gist',\n",
+       " 'read_google_sheet',\n",
+       " 'read_html',\n",
+       " 'read_pdf',\n",
+       " 'read_url',\n",
+       " 'read_yt_transcript']"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[o for o in dir(rd) if o.startswith('read_')]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pre-built Contexts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ContextKit.contexts as ct"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prebuild contexts will always return a dictionary.  This allows you to choose what to use in model context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['async', 'core', 'toolloop'])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "claudette_ctx = ct.claudette()\n",
+    "claudette_ctx.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'async': '# The async version  ## Setup ## Async SDK ``` pyt ...',\n",
+       " 'core': '# Claudette’s source  This is the ‘literate’ sourc ...',\n",
+       " 'toolloop': \"# Tool loop  ``` python import os # os.environ['AN ...\"}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{k:f\"{v[:50]} ...\" for k,v in claudette_ctx.items()}"
    ]
   }
  ],
