update TODO notes for read submodule

--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -46,11 +46,14 @@
    "source": [
     "Todo ideas:\n",
     "- [X] read_url\n",
+    "  - [ ] should enhance to use the existing version which takes a css selector\n",
+    "- [ ] read_nb (smart enough to use a nbdev_clean etc..)\n",
     "- [X] read_gist\n",
     "- [X] read_gh_file\n",
     "- [ ] read_ghurl\n",
     "- [X] read_file\n",
     "- [X] read_dir\n",
+    "  - [ ] should enhance not just to read unicode text, but to adapt to PDFs, ipynbs, etc.\n",
     "- [X] read_pdf\n",
     "- [ ] read_msword\n",
     "- [ ] read_gdoc\n",
