--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -485,12 +485,15 @@
     "#| export\n",
     "def read_dir(path, \n",
     "             exclude_non_unicode=True,\n",
+    "             included_patterns=[\"*\"],\n",
     "             excluded_patterns=[\".git/**\"],\n",
     "             verbose=True):\n",
     "    pattern = '**/*'\n",
     "    result = []\n",
     "    for file_path in glob.glob(os.path.join(path, pattern), recursive=True):\n",
     "        if any(fnmatch.fnmatch(file_path, pat) for pat in excluded_patterns):\n",
+    "            continue\n",
+    "        if not any(fnmatch.fnmatch(file_path, pat) for pat in included_patterns):\n",
     "            continue\n",
     "        if os.path.isfile(file_path):\n",
     "            if exclude_non_unicode and not is_unicode(file_path):\n",
@@ -779,6 +782,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
+    "\n",
     "def gh_ssh_from_gh_url(gh_repo_address):\n",
     "    \"Given a GH URL or SSH remote address, returns a GH URL or None\"\n",
     "    pattern = r'https://github\\.com/([^/]+)/([^/]+)(?:/.*)?'\n",
@@ -831,8 +836,17 @@
     "\n",
     "def read_git_path(path):\n",
     "    # TODO: ?enhance to read repos more specifically than directories\n",
-    "    return read_dir(path)\n",
-    "\n",
+    "    return read_dir(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f18ab35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "def read_gh_repo(path_or_url):\n",
     "    \"Repo contents from path, GH URL, or GH SSH address\"\n",
     "    gh_ssh = gh_ssh_from_gh_url(path_or_url)\n",
