--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -148,8 +148,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from aimagic import create_magic,models\n",
-    "create_magic(models[1])"
+    "# from aimagic import create_magic,models\n",
+    "# create_magic(models[1])"
    ]
   },
   {
@@ -276,7 +276,7 @@
     {
      "data": {
       "text/plain": [
-       "'#!/usr/bin/env bash\\n[ \"${BASH_SOURCE[0]}\" = \"$0\" ] && { echo \"source me don\\'t run me.\"; exit 1; }\\n\\nshowurl() {\\n    # Under iTerm2, shows a URL as a clickable link\\n    echo -e \"\\\\033]8;;${1}\\\\a${1}\\\\033]8'"
+       "'#!/usr/bin/env python3\\nimport os, os.path, sys, socket, urllib.parse, base64\\nfrom pathlib import Path\\n\\ndef openurl(url):\\n    \"Under iTerm2, open the url\"\\n    b64_encoded_url=base64.b64encode(url.encod'"
       ]
      },
      "execution_count": null,
@@ -850,6 +850,10 @@
     "def read_gh_repo(path_or_url):\n",
     "    \"Repo contents from path, GH URL, or GH SSH address\"\n",
     "    gh_ssh = gh_ssh_from_gh_url(path_or_url)\n",
+    "    print('a')\n",
+    "    print(path_or_url)\n",
+    "    print('b')\n",
+    "    print(get_git_repo(gh_ssh))\n",
     "    path = path_or_url if not gh_ssh else get_git_repo(gh_ssh)\n",
     "    return read_git_path(path)"
    ]
@@ -869,7 +873,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ghurl=\"https://github.com/AnswerDotAI/gemlite\""
+    "ghurl=\"https://github.com/AnswerDotAI/claudette\""
    ]
   },
   {
@@ -877,67 +881,9 @@
    "execution_count": null,
    "id": "b347c101",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cloning repo.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'gemlite'...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error cloning repo from cwd /var/folders/vs/j71s84gs4f7d059xxqrf71wc0000gn/T/tmpsjpx9run with error Command '['git', 'clone', 'git@github.com:AnswerDotAI/gemlite.git']' returned non-zero exit status 128.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "git@github.com: Permission denied (publickey).\r\n",
-      "fatal: Could not read from remote repository.\n",
-      "\n",
-      "Please make sure you have the correct access rights\n",
-      "and the repository exists.\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "expected str, bytes or os.PathLike object, not NoneType",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[34], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m s \u001b[38;5;241m=\u001b[39m \u001b[43mread_gh_repo\u001b[49m\u001b[43m(\u001b[49m\u001b[43mghurl\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[32], line 62\u001b[0m, in \u001b[0;36mread_gh_repo\u001b[0;34m(path_or_url)\u001b[0m\n\u001b[1;32m     60\u001b[0m gh_ssh \u001b[38;5;241m=\u001b[39m gh_ssh_from_gh_url(path_or_url)\n\u001b[1;32m     61\u001b[0m path \u001b[38;5;241m=\u001b[39m path_or_url \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m gh_ssh \u001b[38;5;28;01melse\u001b[39;00m get_git_repo(gh_ssh)\n\u001b[0;32m---> 62\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mread_git_path\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[32], line 56\u001b[0m, in \u001b[0;36mread_git_path\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mread_git_path\u001b[39m(path):\n\u001b[1;32m     55\u001b[0m     \u001b[38;5;66;03m# TODO: ?enhance to read repos more specifically than directories\u001b[39;00m\n\u001b[0;32m---> 56\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mread_dir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[20], line 8\u001b[0m, in \u001b[0;36mread_dir\u001b[0;34m(path, exclude_non_unicode, excluded_patterns, verbose)\u001b[0m\n\u001b[1;32m      6\u001b[0m pattern \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m**/*\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      7\u001b[0m result \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file_path \u001b[38;5;129;01min\u001b[39;00m glob\u001b[38;5;241m.\u001b[39mglob(\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpattern\u001b[49m\u001b[43m)\u001b[49m, recursive\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28many\u001b[39m(fnmatch\u001b[38;5;241m.\u001b[39mfnmatch(file_path, pat) \u001b[38;5;28;01mfor\u001b[39;00m pat \u001b[38;5;129;01min\u001b[39;00m excluded_patterns):\n\u001b[1;32m     10\u001b[0m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n",
-      "File \u001b[0;32m<frozen posixpath>:76\u001b[0m, in \u001b[0;36mjoin\u001b[0;34m(a, *p)\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected str, bytes or os.PathLike object, not NoneType"
-     ]
-    }
-   ],
-   "source": [
-    "s = read_gh_repo(ghurl)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f906f23",
-   "metadata": {},
    "outputs": [],
    "source": [
-    "len(s)"
+    "# s = read_gh_repo(ghurl)"
    ]
   },
   {
