--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -1,17 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| hide\n",
-    "import ContextKit.core as ck\n",
-    "from fastcore.foundation import AttrDict"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -149,7 +138,9 @@
        " 'read_file',\n",
        " 'read_gdoc',\n",
        " 'read_gh_file',\n",
+       " 'read_gh_repo',\n",
        " 'read_gist',\n",
+       " 'read_git_path',\n",
        " 'read_google_sheet',\n",
        " 'read_html',\n",
        " 'read_pdf',\n",
