exclude playwrightnb from tests

--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -227,6 +227,7 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
     "# contactless browser w/ playwrightnb\n",
     "read_url('https://docs.fastht.ml/', True)[:200]"
    ]
