CLI initial commit

--- a/nbs/01_contexts.ipynb
+++ b/nbs/01_contexts.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def nbclassic_server(): \n",
+    "def ctx_nbclassic_server(): \n",
     "    return {'nbclassic_server': read_url('https://nbclassic.readthedocs.io/en/latest/nbclassic.html',sel='.bd-article')}"
    ]
   },
@@ -73,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "{'nbclassic_server': 'None\\n\\n...'}"
+       "{'nbclassic_server': 'Skip to main content\\n\\n__Back to top\\n\\n__ `Ctrl`+`K`...'}"
       ]
      },
      "execution_count": null,
@@ -82,7 +82,7 @@
     }
    ],
    "source": [
-    "ctx_head(nbclassic_server())"
+    "ctx_head(ctx_nbclassic_server())"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def docker():\n",
+    "def ctx_docker():\n",
     "    ctxs = {'compose_file':'https://docs.docker.com/reference/compose-file/',\n",
     "            'docker_cli':'https://docs.docker.com/reference/cli/docker/',\n",
     "            'docker_compose_cli':'https://docs.docker.com/reference/cli/docker/compose/',\n",
@@ -116,11 +116,11 @@
     {
      "data": {
       "text/plain": [
-       "{'compose_file': 'None\\n\\n...',\n",
-       " 'docker_cli': 'None\\n\\n...',\n",
-       " 'docker_compose_cli': 'None\\n\\n...',\n",
-       " 'dockerd': 'None\\n\\n...',\n",
-       " 'dockerhub': 'None\\n\\n...'}"
+       "{'compose_file': '  * Get started\\n  * Guides\\n  * Manuals\\n  * Referen...',\n",
+       " 'docker_cli': '  * Get started\\n  * Guides\\n  * Manuals\\n  * Referen...',\n",
+       " 'docker_compose_cli': '  * Get started\\n  * Guides\\n  * Manuals\\n  * Referen...',\n",
+       " 'dockerd': '  * Get started\\n  * Guides\\n  * Manuals\\n  * Referen...',\n",
+       " 'dockerhub': '\\n\\n...'}"
       ]
      },
      "execution_count": null,
@@ -129,7 +129,7 @@
     }
    ],
    "source": [
-    "ctx_head(docker())"
+    "ctx_head(ctx_docker())"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def fastlite_sqlutils():\n",
+    "def ctx_fastlite_sqlutils():\n",
     "    return {\n",
     "        'fastlite_index': read_url('https://answerdotai.github.io/fastlite/index.html.md'),\n",
     "        'fastlite_core': read_url('https://answerdotai.github.io/fastlite/core.html.md'),\n",
@@ -163,9 +163,9 @@
     {
      "data": {
       "text/plain": [
-       "{'fastlite_index': '# fastlite `fastlite` provides some little quality...',\n",
-       " 'fastlite_core': '# Source ## Metadata ``` python from IPython.displ...',\n",
-       " 'sqlite_utils_docs': 'None\\n\\n...'}"
+       "{'fastlite_index': '# fastlite  `fastlite` provides some little qualit...',\n",
+       " 'fastlite_core': '# Source  ## Metadata ``` python from IPython.disp...',\n",
+       " 'sqlite_utils_docs': 'Contents Menu Expand Light mode Dark mode Auto lig...'}"
       ]
      },
      "execution_count": null,
@@ -174,7 +174,7 @@
     }
    ],
    "source": [
-    "ctx_head(fastlite_sqlutils())"
+    "ctx_head(ctx_fastlite_sqlutils())"
    ]
   },
   {
@@ -191,9 +191,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def fasthtml():\n",
+    "def ctx_fasthtml():\n",
     "    return {\n",
-    "        'fasthtml_llms-ctx': read_url('https://docs.fastht.ml/llms-ctx.txt'),\n",
+    "        'fasthtml_llms_ctx': read_url('https://docs.fastht.ml/llms-ctx.txt'),\n",
     "        'hypermedia_summary': read_gist('https://gist.github.com/jph00/4ad7d35ad79013aded41b5ba535a12a3')\n",
     "    }"
    ]
@@ -206,7 +206,7 @@
     {
      "data": {
       "text/plain": [
-       "{'fasthtml_llms-ctx': 'Things to remember when writing FastHTML apps: \\\\\\\\-...',\n",
+       "{'fasthtml_llms-ctx': 'Things to remember when writing FastHTML apps: \\\\- ...',\n",
        " 'hypermedia_summary': '# Hypermedia Systems: book summary\\n\\nThis is a summ...'}"
       ]
      },
@@ -216,7 +216,7 @@
     }
    ],
    "source": [
-    "ctx_head(fasthtml())"
+    "ctx_head(ctx_fasthtml())"
    ]
   },
   {
@@ -233,8 +233,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def fastcore(): \n",
-    "    return {'llms-ctx': read_url('https://fastcore.fast.ai/llms-ctx.txt')}"
+    "def ctx_fastcore(): \n",
+    "    return {'fc_llms_ctx': read_url('https://fastcore.fast.ai/llms-ctx.txt')}"
    ]
   },
   {
@@ -254,7 +254,7 @@
     }
    ],
    "source": [
-    "ctx_head(fastcore())"
+    "ctx_head(ctx_fastcore())"
    ]
   },
   {
@@ -271,11 +271,11 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def claudette():\n",
+    "def ctx_claudette():\n",
     "    ctxs = {\n",
-    "        'async': 'https://claudette.answer.ai/async.html.md',\n",
-    "        'core': 'https://claudette.answer.ai/core.html.md',\n",
-    "        'toolloop': 'https://claudette.answer.ai/toolloop.html.md'\n",
+    "        'async_docs': 'https://claudette.answer.ai/async.html.md',\n",
+    "        'core_docs': 'https://claudette.answer.ai/core.html.md',\n",
+    "        'toolloop_docs': 'https://claudette.answer.ai/toolloop.html.md'\n",
     "    }\n",
     "    return {k: read_url(url) for k, url in ctxs.items()}"
    ]
@@ -288,9 +288,9 @@
     {
      "data": {
       "text/plain": [
-       "{'async': '# The async version ## Setup ## Async SDK ``` pyth...',\n",
-       " 'core': '# Claudette’s source This is the ‘literate’ source...',\n",
-       " 'toolloop': \"# Tool loop ``` python import os # os.environ['ANT...\"}"
+       "{'async': '# The async version  ## Setup ## Async SDK ``` pyt...',\n",
+       " 'core': '# Claudette’s source  This is the ‘literate’ sourc...',\n",
+       " 'toolloop': \"# Tool loop  ``` python import os # os.environ['AN...\"}"
       ]
      },
      "execution_count": null,
@@ -299,7 +299,7 @@
     }
    ],
    "source": [
-    "ctx_head(claudette())"
+    "ctx_head(ctx_claudette())"
    ]
   },
   {
@@ -311,13 +311,6 @@
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
