--- a/nbs/02_projects.ipynb
+++ b/nbs/02_projects.ipynb
@@ -29,7 +29,13 @@
    "source": [
     "#| export\n",
     "import json\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import ContextKit.contexts as ctx\n",
+    "from fastcore.all import bind\n",
+    "\n",
+    "from fastcore.all import call_parse\n",
+    "from typing import Annotated\n",
+    "import sys"
    ]
   },
   {
@@ -51,6 +57,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "88f3cf55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def create_magic_template_cells(ctx_name):\n",
+    "    _fn = bind(create_cell,outputs=[], cell_type='code')  \n",
+    "    _ctx_dict = getattr(globals()['ctx'], templates[ctx_name], None)()\n",
+    "    cells = [_fn(source=[f\"from ContextKit.contexts import *\"]),\n",
+    "            _fn(source=[f\"{templates[ctx_name]} = {templates[ctx_name]}()\\n\"] + [f\"{k} = {templates[ctx_name]}['{k}']\\n\" for k in _ctx_dict.keys()]),\n",
+    "            _fn(source=[f\"%%ai -c\\nPlease read {', '.join([f'$`{k}`' for k in _ctx_dict.keys()])} and give a brief description of what each includes.\"]),]\n",
+    "    return cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ee7923d9",
    "metadata": {},
    "outputs": [],
@@ -65,62 +88,70 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd0b23b4",
+   "id": "46b58bd3",
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
-    "def create_magic_template_cells(*source):\n",
-    "    return [create_cell('code',[],o) for o in source]"
+    "def create_magic_template_nb(ctx_name, path):\n",
+    "    create_nb(create_magic_template_cells(ctx_name), path=path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93d242b2",
+   "id": "5b044a0c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
-    "# Instead of saving, want to build these dynamically based on the contexts module.\n",
-    "templates = {\n",
-    "    'fasthtml': (['import ContextKit.projects as ck\\n','fh = fasthtml()'],['%%ai -c\\n','\\n','Read and give very brief explanation of what is in $`llms_ctx` and $`hypermedia_summary`'])\n",
-    "    }"
+    "templates = {name[4:]: name for name in dir(ctx) if name.startswith('ctx_')}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49b8d8c3",
+   "id": "54cfe5b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['fasthtml_llms-ctx', 'hypermedia_summary'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_magic_template_nb('fasthtml','../testnb2.ipynb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6509ac10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_nb(create_magic_template_cells(*templates['fasthtml']),'../testnb2.ipynb')"
+    "#|export\n",
+    "@call_parse\n",
+    "def ck(ctx_name: Annotated[str, \"Context name (one of: \" + \", \".join(templates.keys()) + \")\"],\n",
+    "       path: Annotated[str, \"Output path for the notebook\"]):\n",
+    "    \"\"\"Create a magic template notebook for a chosen context.\"\"\"\n",
+    "    if ctx_name not in templates:\n",
+    "        print(f\"Error: {ctx_name} is not a valid context name.\")\n",
+    "        print(f\"Valid options are: {', '.join(templates.keys())}\")\n",
+    "        sys.exit(1)\n",
+    "    create_magic_template_nb(ctx_name, path)\n",
+    "    print(f\"Notebook created at {path}\")\n",
+    "\n",
+    "# To make this CLI available when the library is installed, add this to setup.py:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07a1ee6f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ce6ceb29",
-   "metadata": {},
-   "source": [
-    "Todo\n",
-    "+ GH api - bash completion\n",
-    "+ execnb write_nb\n",
-    "+ heirarchical docs railway.blah"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bcb98db8",
+   "id": "15c70365",
    "metadata": {},
    "outputs": [],
    "source": []
