Add python docker api

--- a/nbs/01_contexts.ipynb
+++ b/nbs/01_contexts.ipynb
@@ -35,7 +35,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "from ContextKit.read import *"
+    "from ContextKit.read import *\n",
+    "from fastcore.all import parallel\n"
    ]
   },
   {
@@ -103,9 +104,16 @@
     "    ctxs = {'compose_file':'https://docs.docker.com/reference/compose-file/',\n",
     "            'docker_cli':'https://docs.docker.com/reference/cli/docker/',\n",
     "            'docker_compose_cli':'https://docs.docker.com/reference/cli/docker/compose/',\n",
-    "            'dockerd':'https://docs.docker.com/reference/cli/dockerd/',\n",
-    "            'dockerhub':'https://docs.docker.com/reference/api/hub/latest/'}\n",
-    "    return {k: read_url(v, sel='.prose') for k,v in ctxs.items()}"
+    "            'dockerd':'https://docs.docker.com/reference/cli/dockerd/',}\n",
+    "    ctxs = {k: read_url(v, sel='.prose') for k,v in ctxs.items()}\n",
+    "    \n",
+    "    url = 'https://docker-py.readthedocs.io/en/stable/{}.html'\n",
+    "    page_names = ['client','configs','containers','images','networks','nodes',\n",
+    "                 'plugins','secrets','services','swarm','volumes','api','tls',]\n",
+    "    urls = [url.format(p) for p in page_names]\n",
+    "    pages = parallel(read_url, urls, sel='.body')    \n",
+    "    ctxs = ctxs | ctx_head({f'py_{n}':p for n,p in zip(page_names,pages)})\n",
+    "    return ctxs"
    ]
   },
   {
@@ -120,7 +128,19 @@
        " 'docker_cli': '  * Get started\\n  * Guides\\n  * Manuals\\n  * Referen...',\n",
        " 'docker_compose_cli': '  * Get started\\n  * Guides\\n  * Manuals\\n  * Referen...',\n",
        " 'dockerd': '  * Get started\\n  * Guides\\n  * Manuals\\n  * Referen...',\n",
-       " 'dockerhub': '\\n\\n...'}"
+       " 'py_client': '# Docker SDK for Python\\n\\nA Python library for the ...',\n",
+       " 'py_configs': '# Docker SDK for Python\\n\\nA Python library for the ...',\n",
+       " 'py_containers': '# Docker SDK for Python\\n\\nA Python library for the ...',\n",
+       " 'py_images': '# Docker SDK for Python\\n\\nA Python library for the ...',\n",
+       " 'py_networks': '# Docker SDK for Python\\n\\nA Python library for the ...',\n",
+       " 'py_nodes': '# Docker SDK for Python\\n\\nA Python library for the ...',\n",
+       " 'py_plugins': '# Docker SDK for Python\\n\\nA Python library for the ...',\n",
+       " 'py_secrets': '# Docker SDK for Python\\n\\nA Python library for the ...',\n",
+       " 'py_services': '# Docker SDK for Python\\n\\nA Python library for the ...',\n",
+       " 'py_swarm': '# Docker SDK for Python\\n\\nA Python library for the ...',\n",
+       " 'py_volumes': '# Docker SDK for Python\\n\\nA Python library for the ...',\n",
+       " 'py_api': '# Docker SDK for Python\\n\\nA Python library for the ...',\n",
+       " 'py_tls': '# Docker SDK for Python\\n\\nA Python library for the ...'}"
       ]
      },
      "execution_count": null,
