--- a/nbs/02_projects.ipynb
+++ b/nbs/02_projects.ipynb
@@ -31,9 +31,8 @@
     "import json\n",
     "from pathlib import Path\n",
     "import ContextKit.contexts as ctx\n",
-    "from fastcore.all import bind\n",
+    "from fastcore.all import bind, call_parse\n",
     "\n",
-    "from fastcore.all import call_parse\n",
     "from typing import Annotated\n",
     "import sys"
    ]
@@ -129,29 +128,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6509ac10",
+   "id": "46840a92",
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
-    "@call_parse\n",
-    "def ck(ctx_name: Annotated[str, \"Context name (one of: \" + \", \".join(templates.keys()) + \")\"],\n",
-    "       path: Annotated[str, \"Output path for the notebook\"]):\n",
-    "    \"\"\"Create a magic template notebook for a chosen context.\"\"\"\n",
-    "    if ctx_name not in templates:\n",
-    "        print(f\"Error: {ctx_name} is not a valid context name.\")\n",
-    "        print(f\"Valid options are: {', '.join(templates.keys())}\")\n",
-    "        sys.exit(1)\n",
-    "    create_magic_template_nb(ctx_name, path)\n",
-    "    print(f\"Notebook created at {path}\")\n",
+    "import argparse\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "from typing import Dict\n",
     "\n",
-    "# To make this CLI available when the library is installed, add this to setup.py:"
+    "import ContextKit.contexts as ctx\n",
+    "from fastcore.all import bind"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15c70365",
+   "id": "938974c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def ck():\n",
+    "    templates = {name[4:]: name for name in dir(ctx) if name.startswith('ctx_')}\n",
+    "    \n",
+    "    parser = argparse.ArgumentParser(description=\"Create a magic template notebook for a chosen context.\")\n",
+    "    parser.add_argument('ctx_name', nargs='?', help=f\"Context name. One of: {', '.join(templates.keys())}\")\n",
+    "    parser.add_argument('path', nargs='?', help=\"Output path for the notebook\")\n",
+    "    parser.add_argument('--force', action='store_true', help=\"Force overwrite without prompting\")\n",
+    "    args = parser.parse_args()\n",
+    "    \n",
+    "    if not args.ctx_name or not args.path: parser.print_help(); return\n",
+    "\n",
+    "    # Arg cleanup\n",
+    "    if path.suffix != '.ipynb': path = path.with_suffix('.ipynb')\n",
+    "    path = Path(args.path)\n",
+    "    \n",
+    "    # Failure mode catching\n",
+    "    if path.is_dir(): print(f\"Error: {path} is a directory. Please provide a file path.\"); return\n",
+    "    if args.ctx_name not in templates:\n",
+    "        print(f\"Error: {args.ctx_name} is not a valid context name.\")\n",
+    "        print(f\"Valid options are: {', '.join(templates.keys())}\")\n",
+    "        return\n",
+    "    if path.exists() and not args.force:\n",
+    "        overwrite = input(f\"{path} already exists. Overwrite? (y/N): \").lower() == 'y'\n",
+    "        if not overwrite: print(\"Operation cancelled.\"); return\n",
+    "    \n",
+    "    # Create NB\n",
+    "    create_magic_template_nb(args.ctx_name, str(path), templates)\n",
+    "    print(f\"Notebook created at {path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b94dd559",
    "metadata": {},
    "outputs": [],
    "source": []
