--- a/nbs/01_contexts.ipynb
+++ b/nbs/01_contexts.ipynb
@@ -112,7 +112,7 @@
     "                 'plugins','secrets','services','swarm','volumes','api','tls',]\n",
     "    urls = [url.format(p) for p in page_names]\n",
     "    pages = parallel(read_url, urls, sel='.body')    \n",
-    "    ctxs = ctxs | ctx_head({f'py_{n}':p for n,p in zip(page_names,pages)})\n",
+    "    ctxs = ctxs | {f'py_{n}':p for n,p in zip(page_names,pages)}\n",
     "    return ctxs"
    ]
   },
