Add defaults to ck help menu

--- a/nbs/03_cli.ipynb
+++ b/nbs/03_cli.ipynb
@@ -107,20 +107,21 @@
     "    templates = {name[4:]: name for name in dir(ctx) if name.startswith('ctx_')}\n",
     "    \n",
     "    parser = argparse.ArgumentParser(description=\"Create a magic template notebook or open Jupyter notebook.\")\n",
+    "    \n",
     "    subparsers = parser.add_subparsers(dest='command')\n",
     "\n",
-    "    create_parser = subparsers.add_parser('c', help='Create a magic template notebook')\n",
+    "    create_parser = subparsers.add_parser('c', help='Create a magic template notebook', formatter_class=argparse.ArgumentDefaultsHelpFormatter)\n",
     "    create_parser.add_argument('ctx_name', help=f\"Context name. One of: {', '.join(templates.keys())}\")\n",
     "    create_parser.add_argument('path', help=\"Output path for the notebook\")\n",
     "    create_parser.add_argument('--force', default=False, action='store_true', help=\"Force overwrite without prompting\")\n",
     "    \n",
-    "    jnb_parser = subparsers.add_parser('o', help='Open Jupyter notebook')\n",
+    "    jnb_parser = subparsers.add_parser('o', help='Open Jupyter notebook', formatter_class=argparse.ArgumentDefaultsHelpFormatter)\n",
     "    jnb_parser.add_argument('path', help=\"Path to the notebook\")\n",
     "    jnb_parser.add_argument('--host', default='localhost', help=\"Jupyter server host\")\n",
     "    jnb_parser.add_argument('--port', type=int, default=8888, help=\"Jupyter server port\")\n",
     "    jnb_parser.add_argument('--jupy-base-dir', type=Path, default='~/github', help=\"Base directory for notebook paths\")\n",
     "\n",
-    "    create_and_open_parser = subparsers.add_parser('co', help='Create a magic template notebook and open it')\n",
+    "    create_and_open_parser = subparsers.add_parser('co', help='Create a magic template notebook and open it', formatter_class=argparse.ArgumentDefaultsHelpFormatter)\n",
     "    create_and_open_parser.add_argument('ctx_name', help=f\"Context name. One of: {', '.join(templates.keys())}\")\n",
     "    create_and_open_parser.add_argument('path', help=\"Output path for the notebook\")\n",
     "    create_and_open_parser.add_argument('--force', default=False, action='store_true', help=\"Force overwrite without prompting\")\n",
